fix overflow img index cards

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ main .img-car img {
     text-align: center;
     justify-content: center;
 }
+.width-card-index{
+    min-width: 20rem;
+}
 
 .cards a {
     width: 270px;
